--- a/package.json
+++ b/package.json
@@ -1,68 +1,66 @@
 {
-  "name": "rising-sky",
-  "version": "1.0.0",
-  "description": "Rising Sky",
+  "name": "component-framework",
+  "version": "2.0.0",
+  "description": "Starter kit for web page creation.",
+  "main": "app/index.html",
   "scripts": {
-    "build-dev:webpack": "webpack",
-    "watch:webpack": "webpack --watch",
-    "watch:eleventy": "cross-env ELEVENTY_ENV=development eleventy --serve",
-    "dev": "npm-run-all clean build-dev:webpack --parallel watch:*",
-    "build:webpack": "cross-env NODE_ENV=production webpack --mode production",
-    "build:eleventy": "cross-env ELEVENTY_ENV=production eleventy",
-    "build": "run-s clean build:*",
-    "serve:local": "serve _site",
-    "serve": "run-s build serve:local",
-    "clean": "rimraf _site",
-    "format:js": "prettier '**/*.js' --write && eslint '**/*.js' --fix",
-    "format:json": "prettier '**/*.json' --write",
-    "format": "run-s format:*",
-    "lint": "eslint --ext .js ."
+    "serve": "gulp serve",
+    "build": "gulp build",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "license": "ISC",
+  "browserslist": [
+    "defaults",
+    "not IE 11"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/patrickgrey/ians-tender-2020-framework.git"
+  },
+  "keywords": [
+    "e-learning",
+    "starter kit",
+    "template"
+  ],
+  "author": "EUROCONTROL IANS EDEV",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/patrickgrey/ians-tender-2020-framework/issues"
+  },
+  "homepage": "https://github.com/patrickgrey/ians-tender-2020-framework#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^0.11.0",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "=7.9.0",
+    "@fullhuman/postcss-purgecss": "^3.0.0",
+    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^9.8.6",
-    "copy-webpack-plugin": "^6.0.3",
-    "cross-env": "^7.0.2",
-    "css-loader": "^4.2.1",
+    "browser-sync": "^2.26.7",
     "cssnano": "^4.1.10",
-    "date-fns": "^2.15.0",
-    "eleventy-plugin-lazyimages": "^2.0.1",
-    "eslint": "^7.10.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "file-loader": "^6.0.0",
-    "glob": "^7.1.6",
-    "html-minifier": "^4.0.0",
-    "html-webpack-plugin": "^4.3.0",
-    "husky": "^4.2.5",
-    "image-webpack-loader": "^6.0.0",
-    "lint-staged": "^10.2.11",
-    "mini-css-extract-plugin": "^0.9.0",
-    "npm-run-all": "^4.1.5",
-    "postcss-loader": "^3.0.0",
-    "prettier": "^2.1.2",
-    "rimraf": "^3.0.2",
-    "serve": "^11.3.2",
-    "tailwindcss": "^1.6.2",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-fix-style-only-entries": "^0.5.1"
+    "del": "^5.1.0",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-better-rollup": "^4.0.1",
+    "gulp-dependents": "^1.2.5",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-postcss": "^9.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-size": "^3.0.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-wait": "0.0.2",
+    "gulp-zip": "^5.0.1",
+    "imagemin-jpegtran": "^6.0.0",
+    "imagemin-pngquant": "^8.0.0",
+    "jpegtran-bin": "^4.0.0",
+    "normalize.css": "^8.0.1",
+    "pngquant-bin": "^5.0.2",
+    "postcss-csso": "^5.0.0",
+    "rollup": "^2.0.6",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "sass": "^1.29.0",
+    "tailwindcss": "^2.0.1"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.js": [
-      "prettier --write",
-      "eslint --fix",
-      "eslint"
-    ],
-    "*.json": [
-      "prettier --write"
-    ]
-  }
+  "dependencies": {}
 }
