Got esm 11ty v3 working

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
-node_modules
+website-build/
 package-lock.json
-website-build
+.nvmrc
+.cache
+node_modules
+.tmp
+dist
+.DS_Store
+*.mp4
+*.wav
+*.mov
+*.avi
+*.zip
+*.mts
+*.hdr
+.npmrc
+.vscode
+*.psd
