--- a/package.json
+++ b/package.json
@@ -4,20 +4,43 @@
   "description": "Rising Sky is a web development studio led by Patrick Grey",
   "main": "index.js",
   "scripts": {
-    "dev": "npx @11ty/eleventy --serve",
-    "build": "npx @11ty/eleventy",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "del": "del-cli website-build",
+    "serve": "cross-env DEV_ENVIRONMENT=dev npx @11ty/eleventy --serve ",
+    "dev": "run-s del serve",
+    "build:11ty": "cross-env DEV_ENVIRONMENT=prod npx @11ty/eleventy",
+    "build:esbuild": "node _utilities/build.mjs",
+    "build:zip": "node _utilities/zip-it-and-ship-it.mjs",
+    "build:server": "npx @11ty/eleventy-dev-server --dir=website-build",
+    "build": "run-s del build:11ty"
   },
   "keywords": [],
-  "author": "Patrick Grey",
+  "author": {
+    "name": "Patrick Grey",
+    "email": "websemantic@yahoo.co.uk",
+    "url": "https://risingsky.co.uk/"
+  },
   "license": "ISC",
+  "type": "module",
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.1",
-    "@11ty/eleventy-img": "^3.1.8",
+    "@11ty/eleventy": "3.0.0-alpha.10",
+    "@11ty/eleventy-img": "^4.0.2",
     "@11ty/eleventy-navigation": "^0.3.5",
-    "@11ty/eleventy-plugin-bundle": "^1.0.4",
+    "@11ty/eleventy-plugin-bundle": "^2.0.2",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
-    "luxon": "^3.4.4"
+    "@11ty/eleventy-plugin-vite": "^4.0.0",
+    "adm-zip": "^0.5.12",
+    "clean-css": "^5.3.3",
+    "cross-env": "^7.0.3",
+    "cross-var": "^1.1.0",
+    "del-cli": "^5.1.0",
+    "directory-tree": "^3.5.1",
+    "dotenv": "^16.4.5",
+    "dotenv-cli": "^7.4.1",
+    "esbuild": "^0.20.2",
+    "luxon": "^3.4.4",
+    "npm-run-all": "^4.1.5",
+    "terser": "^5.31.0",
+    "tiny-glob": "^0.2.9"
   }
 }
