--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "risingsky",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Rising Sky is a web development studio led by Patrick Grey",
   "main": "index.js",
   "scripts": {
@@ -37,6 +37,7 @@
     "dotenv": "^16.4.5",
     "dotenv-cli": "^7.4.1",
     "esbuild": "^0.20.2",
+    "lightningcss": "^1.25.1",
     "luxon": "^3.4.4",
     "npm-run-all": "^4.1.5",
     "terser": "^5.31.0",
