--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:11ty": "cross-env DEV_ENVIRONMENT=prod npx @11ty/eleventy",
     "build:esbuild": "node _back-end/build.mjs",
     "build:server": "npx @11ty/eleventy-dev-server --dir=website-build",
-    "build": "run-s del build:11ty build:esbuild build:server"
+    "build": "run-s del build:11ty build:esbuild"
   },
   "keywords": [],
   "author": {
